clusters/my-cluster/attrage-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attrage
---
apiVersion: v1
kind: Service
metadata:
  name: attrage-app
  labels:
    app: attrage-app
    tier: frontend
  namespace: attrage
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: attrage-app
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attrage-app
  namespace: attrage
spec:
  selector:
    matchLabels:
      app: attrage-app
  replicas: 1
  template:
    metadata:
      labels:
        app: attrage-app
        tier: frontend
    spec:
      containers:
      - name: attrage-app
        image: kamiq.skoda.roy.lab/kpack/attrage-app-5:b6.20220526.023931 # {"$imagepolicy": "flux-system:attrage-app-5"}
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: attrage-httpproxy
  namespace: attrage
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: attrage-app
      port: 80
  virtualhost:
    fqdn: attrage-app-w4.terasky.local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attrage-mysql
  labels:
    app: attrage-app
  namespace: attrage
spec:
  selector:
    matchLabels:
      app: attrage
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: attrage
        tier: mysql
    spec:
      containers:
      - image: kamiq.skoda.roy.lab/library/attrage-db:0.4
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: attrage-mysql
  labels:
    app: attrage-app
  namespace: attrage
spec:
  ports:
  - port: 3306
  selector:
    app: attrage
    tier: mysql
  clusterIP: None
